Fix #32334: mesh separate by material with > 2 materials could include some incorrect extra edges.